--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
+        <!-- <meta http-equiv="refresh" content="5;url=http://seekerbays.vercel.app"> -->
+
         <meta
             name="description"
             content="Web site created using create-react-app"
